--- a/Credit/pom.xml
+++ b/Credit/pom.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.0.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>inteca.exam</groupId>
 	<artifactId>eureka-client-credit</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>eureka-server-1</name>
+	<name>credit</name>
 	<description>Credit - Client Eureka server</description>
 
 	<properties>
@@ -24,7 +25,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -70,6 +71,7 @@
 		</dependencies>
 	</dependencyManagement>
 
+
 	<build>
 		<finalName>credit-service</finalName>
 		<plugins>
@@ -77,7 +79,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>2.3.0</version>
+				<configuration>
+					<to>
+						<image>creditimage</image>
+					</to>
+					<from> <image>openjdk:8u212-jre-alpine</image></from>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
 </project>
